--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -27,7 +27,7 @@ variant/extensions_support=true
 variant/thread_support=false
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
-html/export_icon=false
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
